--- a/tagreader.yaml
+++ b/tagreader.yaml
@@ -1,8 +1,7 @@
 # Insert your SSID and Your PWD after inital setup
 wifi:
-# networks:
-#    - ssid: 'REPLACEME'          # Enter your WiFi SSID here. Example: `ssid: 'your_network_name'`
-#      password: 'REPLACEME'      # Enter your wifi password here. Example: `password: 'abcde123456'`
+  ssid: !secret wifi_ssid
+  password: !secret wifi_password
   ap:
     ssid: ${name}
 
